--- a/aef.html
+++ b/aef.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="assets/js/web3.js"></script>
+    <script src="assets/js/web3.js?123123"></script>
 </head>
 <body>
     <button class="enableEthereumButton">Enable Ethereum</button>
