--- a/aef.html
+++ b/aef.html
@@ -9,22 +9,22 @@
 <body>
     <button class="enableEthereumButton">Enable Ethereum</button>
 <br/>
-    totalStaked:<span id="totalStaked"></span>
+    总质押:<span id="totalStaked"></span>
     <br/>
-    dividendsPool7:<span id="dividendsPool7"></span>
+    7天池红利:<span id="dividendsPool7"></span>
 	<br/>
-    dividendsPool15:<span id="dividendsPool15"></span>
+    15天池红利:<span id="dividendsPool15"></span>
 	<br/>
-    dividendsPool30:<span id="dividendsPool30"></span>
+    30天池红利:<span id="dividendsPool30"></span>
     <br/>
-    stake7:<span id="stake7"></span>
+    玩家7天池质押:<span id="stake7"></span>
 	<br/>
-    stake15:<span id="stake15"></span>
+    玩家15天池质押:<span id="stake15"></span>
 	<br/>
-    stake30:<span id="stake30"></span>
+    玩家30天池质押:<span id="stake30"></span>
 	<br/>
-    dividends:<span id="dividends"></span>
-    balance:<span id="balance"></span>
+    玩家总分红:<span id="dividends"></span>
+    玩家可用余额:<span id="balance"></span>
 	<br/>
     期限：
     <select id="dayType">
