--- a/aef.html
+++ b/aef.html
@@ -19,9 +19,9 @@
     <br/>
     7天池总质押:<span id="poolstake7"></span>
 	<br/>
-    15天池质押:<span id="poolstake15"></span>
+    15天池总质押:<span id="poolstake15"></span>
 	<br/>
-    30天池质押:<span id="poolstake30"></span>
+    30天池总质押:<span id="poolstake30"></span>
 	<br/>
     7天池红利:<span id="dividendsPool7"></span>
 	<br/>
